--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="login">登陆</string>
     <string name="reset_psw">修改密码</string>
     <string name="register">注册</string>
+    <string name="login_register">登陆/注册</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
