--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,15 @@
 
     <string name="action_settings">Settings</string>
 
+    <!--error-->
+    <string name="error_mobile">手机号不合法</string>
+    <string name="error_psw">密码不可为空</string>
+    <string name="error_user_name">用户名不可为空</string>
+    <string name="error_login">用户名或密码错误</string>
+
+    <string name="login_success">登陆成功</string>
+    <string name="reset_success">密码重置成功</string>
+
+    <string name="never_login">您从未登陆过</string>
+    <string name="first_login">登陆过才可修改密码</string>
 </resources>
