--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app">Stone</string>
     <string name="profile">个人中心</string>
     <string name="login">登陆</string>
+    <string name="post">发表内容</string>
     <string name="reset_psw">修改密码</string>
     <string name="register">注册</string>
     <string name="login_register">登陆/注册</string>
