--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="login">登陆</string>
     <string name="post">发表内容</string>
     <string name="image">查看大图</string>
+    <string name="circle">圆形动画</string>
     <string name="reset_psw">修改密码</string>
     <string name="register">注册</string>
     <string name="login_register">登陆/注册</string>
@@ -27,6 +28,7 @@
 
     <string name="account_info">账号</string>
     <string name="log_out">退出账号</string>
+    <string name="nav_circle">弹弹弹</string>
 
     <string name="loading">正在加载...</string>
 </resources>
