--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="reset_psw">修改密码</string>
     <string name="register">注册</string>
     <string name="login_register">登陆/注册</string>
+    <string name="paint">画板</string>
+    <string name="birthday_setting">设置出生日期</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
