--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="register">注册</string>
     <string name="login_register">登陆/注册</string>
     <string name="paint">画板</string>
+    <string name="test">测试Retrofit</string>
     <string name="birthday_setting">设置出生日期</string>
     <string name="comment_list">评论列表</string>
     <string name="personal_post">我的消息</string>
