--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="birthday_setting">设置出生日期</string>
     <string name="comment_list">评论列表</string>
     <string name="personal_post">我的消息</string>
+    <string name="normal_img">图片</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
